--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>daniel<br />
 						abud</h1>
-						<p>Business Analyst with experiences at Booking.com, OpenTable, GitHub and Google</p>
+						<p>Business Analyst with experiences at Google, GitHub, Booking.com, and OpenTable</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -29,7 +29,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Daniel Abud</a>
+						<a href="index.html" class="logo">Home</a>
 					</header>
 
 				<!-- Nav -->
@@ -50,81 +50,114 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<h2><a href="#">About me</a></h2>
+									<p>I am a multidisciplinary professional with experiences in analytics, operations, sales, and finance. My analytical skills pair well with my time management acumen and my attention to detail. I am proficient with SQL,
+ 									Excel, Salesforce, Looker, Great Plains, and SAP, and I am fluent in English, Spanish, and Portuguese. I am a strong communicator, collaborator, and mentor able to effectively build and nurture strong
+									relationships with direct-reports, customers, stakeholders, organizational leadership, and colleagues.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
-								</ul>
+							</article>
+
+							<article class="post featured">
+								<header class="major">
+									<h2><a href="#">Professional Experience</a></h2>
+								</header>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
 								<article>
-									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
+									<header><h2>Sr. Data Analyst</h2></header>
+									<header><h2>GitHub</h2></header>
+										<h3>Dec 2019 - Present</h3>
+									<p><ul>
+									<li>Work with key sales leaders on critical strategic, organizational, and operational projects designed to increase revenue, sales productivity, and operational efficiency.
+										<br/><br/>
+									<li>Provide thought leadership, perform business analysis, and support execution of high-impact strategic projects and mission-critical initiatives.
+										<br/><br/>
+									<li>Work with our cross-functional partners (Sales, Marketing, Strategic Finance, Customer Success, Support, Product) to ensure the collaborative execution of key projects, while continually finding opportunities for ongoing program improvements and enhancements.
+									</ul></p>
 								</article>
 								<article>
-									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
+									<header><h2>Board Member</h2></header>
+									<header><h2>Ruby's Place</h2></header>
+										<h3>Sep 2019 - Present</h3>
+									<p><ul>
+									<li>Ruby's place provides survivors with crisis services, shelter, counseling, children's services, and more. We also provide educational training and technical assistance to law enforcement and providers.
+										<br/><br/>
+									<li>Together, we are taking a stand against human trafficking and domestic abuse by raising awareness and providing the best possible prevention and supportive services to survivors.
+									</ul></p>
 								</article>
 								<article>
-									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
+									<header><h2>Sales Operations Analyst</h2></header>
+									<header><h2>Google</h2></header>
+										<h3>(via Adecco)</h3>
+										<h3>Sep 2017 - Sep 2019</h3>
+									<p><ul>
+									<li>Leveraged extensive industry experience to effectively examine and analyze statistical data, building an awareness of the market while forecasting trends in ways that drive insights.
+										<br/><br/>
+									<li>Collaborated with Operations Leads, building business models and providing ad hoc data, while also working with Sales, BI, and Finance teams, combining our knowledge in ways that energize results.
+									</ul></p>
 								</article>
 								<article>
-									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
+									<header><h2>Cash Management Analyst</h2></header>
+									<header><h2>OpenTable</h2></header>
+										<h3>May 2017 - Sep 2017</h3>
+									<p><ul>
+									<li>Reconciled bank statements, reporting, and general month-end processes as well as coordinated and processed invoice batches, applied daily cash receipts, and entered adjustments against AR.
+									</ul></p>
 								</article>
 								<article>
-									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
+									<header><h2>Accounts Receivable Specialist</h2></header>
+									<header><h2>OpenTable</h2></header>
+										<h3>Jul 2016 - Apr 2017</h3>
+									<p><ul>
+									<li>Oversaw portfolio of 4,000+ accounts, identifying and resolving root causes, managing and reviewing weekly ageing report, and providing customer support based on payment behavior.
+										<br/><br/>
+									<li>Displayed strong capacity to evaluate and improve business processes, proactively energizing and enhancing internal processes while effectively reaching a cash collection target of 97%.
+									</ul></p>
 								</article>
 								<article>
+									<header><h2>Credit Control Team Lead</h2></header>
+									<header><h2>Booking.com</h2></header>
+										<h3>Apr 2015 - Jun 2016</h3>
+									<p><ul>
+									<li>Managed team of 6 credit controllers, providing support and motivation at all time as well as training and coaching direct-reports to holistically develop credit control team.
+										<br/><br/>
+									<li>Ensured monthly cash collection targets were met, monitored overdue debtors and risk analyses, stimulated commercial awareness within the team, and improved alignment with sales department.
+									</ul></p>
+								</article>
+								<article>
+									<header><h2>Operational Team Lead</h2></header>
+									<header><h2>Booking.com</h2></header>
+										<h3>Nov 2012 - Apr 2015</h3>
+									<p><ul>
+									<li>Recruited, trained, and supervised team of 15+ direct reports and was responsible for qualifying leads received through the website and converting them into active customers.
+										<br/><br/>
+									<li>Set up and monitored targets/KPIs and improved team’s commercial skills, which led to an eventual merger between operational and commercial departments.
+										<br/><br/>
+									<li>Developed operational procedures and maintained communication with other teams and functional areas, demonstrating ability to listen to others and collaborate effectively.
+									</ul></p>
+								</article>
+								<article>
+									<header><h2>Sr Coordinator Hotels</h2></header>
+									<header><h2>Booking.com</h2></header>
+										<h3>Mar 2011 - Oct 2012</h3>
+									<p><ul>
+									<li>Oversaw all activities within the area/team of commercial content editors, coordinators and interns as well as recruited, trained, coached and developed over 5 team members.
+										<br/><br/>
+									<li>Managed the workload distribution amongst the team, setting priorities based on demand and providing management support along the way.
+									</ul></p>
+								</article>
+								<article>
+									<header><h2>Travel Coordinator</h2></header>
+									<header><h2>TTK Sports Marketing</h2></header>
+										<h3>Aug 2009 - Mar 2011</h3>
+									<p><ul>
+									<li>Managed strategic planning and growth initiative of the travel department as well as developed global travel itineraries and managed financial resources and sales to successfully improving ROI.
+									</ul></p>
+								</article>
+
+<!-- 								<article>
 									<header>
 										<span class="date">April 7, 2017</span>
 										<h2><a href="#">Augue lorem<br />
@@ -136,7 +169,7 @@
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
-							</section>
+ -->							</section>
 
 					</div>
 
@@ -163,7 +196,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; daniel abud</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li></ul>
+						<ul><li>&copy; by daniel abud</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li></ul>
 					</div>
 
 			</div>
