--- a/generic.html
+++ b/generic.html
@@ -41,22 +41,32 @@
 								<header class="major">
 									<h1>Education</h1>
 								</header>
-								<p>Anhembi Morumbi University - Sao Paulo, Brazil - 1998 to 2001</br>
-								Bachelor's Degree in Business Administration and Management</p>
-								<p>General Assembly - San Francisco, US</br>
-								SQL Bootcamp (Basic and Advanced modules)</p>
-								<p>Excel Communications - Amsterdam, NL</br>
-								Aspiring Leaders (Managing People)</p>
-								<p>Excel Communications - Amsterdam, NL</br>
-								Art of Management I (Managing Performance)</p>
-								<p>Excel Communications - Amsterdam, NL</br>
-								Art of Management II (Managing Teams)</p>
-								<p>Insights Delivery - Sao Paulo, BR</br>
-								High Performing Teams</p>
-								<p>Booking.com - Sao Paulo, BR</br>
-								Coaching for Success and Constructive Feedback Training</p>
-								<p>Booking.com - Sao Paulo, BR</br>
-								Sales for Performance</p>
+								<ul>
+								<p>
+									<li>Anhembi Morumbi University - Sao Paulo, Brazil - 1998 to 2001</br>
+										Bachelor's Degree in Business Administration and Management</p>
+								<p>
+									<li>General Assembly - San Francisco, US</br>
+										SQL Bootcamp (Basic and Advanced modules)</p>
+								<p>
+									<li>Excel Communications - Amsterdam, NL</br>
+										Aspiring Leaders (Managing People)</p>
+								<p>
+									<li>Excel Communications - Amsterdam, NL</br>
+										Art of Management I (Managing Performance)</p>
+								<p>
+									<li>Excel Communications - Amsterdam, NL</br>
+										Art of Management II (Managing Teams)</p>
+								<p>
+									<li>Insights Delivery - Sao Paulo, BR</br>
+										High Performing Teams</p>
+								<p>
+									<li>Booking.com - Sao Paulo, BR</br>
+										Coaching for Success and Constructive Feedback Training</p>
+								<p>
+									<li>Booking.com - Sao Paulo, BR</br>
+										Sales for Performance</p>
+								</ul>
 							</section>
 
 					</div>
