--- a/index.html
+++ b/index.html
@@ -66,95 +66,103 @@
 						<!-- Posts -->
 							<section class="posts">
 								<article>
+										<img src="images/github.png" alt="" />
 									<header><h2>Sr. Data Analyst</h2></header>
 									<header><h2>GitHub</h2></header>
 										<h3>Dec 2019 - Present</h3>
-									<p><ul>
-									<li>Work with key sales leaders on critical strategic, organizational, and operational projects designed to increase revenue, sales productivity, and operational efficiency.
+									<p>
+									Work with key sales leaders on critical strategic, organizational, and operational projects designed to increase revenue, sales productivity, and operational efficiency.
 										<br/><br/>
-									<li>Provide thought leadership, perform business analysis, and support execution of high-impact strategic projects and mission-critical initiatives.
+									Provide thought leadership, perform business analysis, and support execution of high-impact strategic projects and mission-critical initiatives.
 										<br/><br/>
-									<li>Work with our cross-functional partners (Sales, Marketing, Strategic Finance, Customer Success, Support, Product) to ensure the collaborative execution of key projects, while continually finding opportunities for ongoing program improvements and enhancements.
-									</ul></p>
+									Work with our cross-functional partners (Sales, Marketing, Strategic Finance, Customer Success, Support, Product) to ensure the collaborative execution of key projects, while continually finding opportunities for ongoing program improvements and enhancements.
+									</p>
 								</article>
 								<article>
+										<img src="images/rubys.png" alt="" />
 									<header><h2>Board Member</h2></header>
 									<header><h2>Ruby's Place</h2></header>
 										<h3>Sep 2019 - Present</h3>
-									<p><ul>
-									<li>Ruby's place provides survivors with crisis services, shelter, counseling, children's services, and more. We also provide educational training and technical assistance to law enforcement and providers.
+									<p>
+									Ruby's place provides survivors with crisis services, shelter, counseling, children's services, and more. We also provide educational training and technical assistance to law enforcement and providers.
 										<br/><br/>
-									<li>Together, we are taking a stand against human trafficking and domestic abuse by raising awareness and providing the best possible prevention and supportive services to survivors.
-									</ul></p>
+									Together, we are taking a stand against human trafficking and domestic abuse by raising awareness and providing the best possible prevention and supportive services to survivors.
+									</p>
 								</article>
 								<article>
+										<img src="images/google.png" alt="" />
 									<header><h2>Sales Operations Analyst</h2></header>
 									<header><h2>Google</h2></header>
 										<h3>(via Adecco)</h3>
 										<h3>Sep 2017 - Sep 2019</h3>
-									<p><ul>
-									<li>Leveraged extensive industry experience to effectively examine and analyze statistical data, building an awareness of the market while forecasting trends in ways that drive insights.
+									<p>
+									Leveraged extensive industry experience to effectively examine and analyze statistical data, building an awareness of the market while forecasting trends in ways that drive insights.
 										<br/><br/>
-									<li>Collaborated with Operations Leads, building business models and providing ad hoc data, while also working with Sales, BI, and Finance teams, combining our knowledge in ways that energize results.
-									</ul></p>
+									Collaborated with Operations Leads, building business models and providing ad hoc data, while also working with Sales, BI, and Finance teams, combining our knowledge in ways that energize results.
+									</p>
 								</article>
 								<article>
+										<img src="images/opentable.png" alt="" />
 									<header><h2>Cash Management Analyst</h2></header>
 									<header><h2>OpenTable</h2></header>
 										<h3>May 2017 - Sep 2017</h3>
-									<p><ul>
-									<li>Reconciled bank statements, reporting, and general month-end processes as well as coordinated and processed invoice batches, applied daily cash receipts, and entered adjustments against AR.
-									</ul></p>
+									<p>
+									Reconciled bank statements, reporting, and general month-end processes as well as coordinated and processed invoice batches, applied daily cash receipts, and entered adjustments against AR.
+									</p>
 								</article>
 								<article>
+										<img src="images/opentable.png" alt="" />
 									<header><h2>Accounts Receivable Specialist</h2></header>
 									<header><h2>OpenTable</h2></header>
 										<h3>Jul 2016 - Apr 2017</h3>
-									<p><ul>
-									<li>Oversaw portfolio of 4,000+ accounts, identifying and resolving root causes, managing and reviewing weekly ageing report, and providing customer support based on payment behavior.
+									<p>
+									Oversaw portfolio of 4,000+ accounts, identifying and resolving root causes, managing and reviewing weekly ageing report, and providing customer support based on payment behavior.
 										<br/><br/>
-									<li>Displayed strong capacity to evaluate and improve business processes, proactively energizing and enhancing internal processes while effectively reaching a cash collection target of 97%.
-									</ul></p>
+									Displayed strong capacity to evaluate and improve business processes, proactively energizing and enhancing internal processes while effectively reaching a cash collection target of 97%.
+									</p>
 								</article>
 								<article>
+										<img src="images/booking.png" alt="" />
 									<header><h2>Credit Control Team Lead</h2></header>
 									<header><h2>Booking.com</h2></header>
 										<h3>Apr 2015 - Jun 2016</h3>
-									<p><ul>
-									<li>Managed team of 6 credit controllers, providing support and motivation at all time as well as training and coaching direct-reports to holistically develop credit control team.
+									<p>
+									Managed team of 6 credit controllers, providing support and motivation at all time as well as training and coaching direct-reports to holistically develop credit control team.
 										<br/><br/>
-									<li>Ensured monthly cash collection targets were met, monitored overdue debtors and risk analyses, stimulated commercial awareness within the team, and improved alignment with sales department.
-									</ul></p>
+									Ensured monthly cash collection targets were met, monitored overdue debtors and risk analyses, stimulated commercial awareness within the team, and improved alignment with sales department.
+									</p>
 								</article>
 								<article>
+										<img src="images/booking.png" alt="" />
 									<header><h2>Operational Team Lead</h2></header>
 									<header><h2>Booking.com</h2></header>
 										<h3>Nov 2012 - Apr 2015</h3>
-									<p><ul>
-									<li>Recruited, trained, and supervised team of 15+ direct reports and was responsible for qualifying leads received through the website and converting them into active customers.
+									<p>
+									Recruited, trained, and supervised team of 15+ direct reports and was responsible for qualifying leads received through the website and converting them into active customers.
 										<br/><br/>
-									<li>Set up and monitored targets/KPIs and improved team’s commercial skills, which led to an eventual merger between operational and commercial departments.
+									Set up and monitored targets/KPIs and improved team’s commercial skills, which led to an eventual merger between operational and commercial departments.
 										<br/><br/>
-									<li>Developed operational procedures and maintained communication with other teams and functional areas, demonstrating ability to listen to others and collaborate effectively.
-									</ul></p>
+									Developed operational procedures and maintained communication with other teams and functional areas, demonstrating ability to listen to others and collaborate effectively.
+									</p>
 								</article>
 								<article>
+										<img src="images/booking.png" alt="" />
 									<header><h2>Sr Coordinator Hotels</h2></header>
 									<header><h2>Booking.com</h2></header>
 										<h3>Mar 2011 - Oct 2012</h3>
-									<p><ul>
-									<li>Oversaw all activities within the area/team of commercial content editors, coordinators and interns as well as recruited, trained, coached and developed over 5 team members.
+									<p>
+									Oversaw all activities within the area/team of commercial content editors, coordinators and interns as well as recruited, trained, coached and developed over 5 team members.
 										<br/><br/>
-									<li>Managed the workload distribution amongst the team, setting priorities based on demand and providing management support along the way.
-									</ul></p>
+									Managed the workload distribution amongst the team, setting priorities based on demand and providing management support along the way.
+									</p>
 								</article>
 								<article>
 									<header><h2>Travel Coordinator</h2></header>
 									<header><h2>TTK Sports Marketing</h2></header>
 										<h3>Aug 2009 - Mar 2011</h3>
-									<p><ul>
-									<li>Managed strategic planning and growth initiative of the travel department as well as developed global travel itineraries and managed financial resources and sales to successfully improving ROI.
-									</ul></p>
+									<p>
+									Managed strategic planning and growth initiative of the travel department as well as developed global travel itineraries and managed financial resources and sales to successfully improving ROI.
+									</p>
 								</article>
 
 <!-- 								<article>
