--- a/generic.html
+++ b/generic.html
@@ -74,21 +74,36 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section class="split contact">
-							<section class="alt">
+						<section>
+						<ul>
+						<li>San Francisco, CA</li>
+						<li>dlabud@gmail.com</li>
+						<li><a href="https://docs.google.com/document/d/1OP9Mu_p1bb9yRUprzOPFUPB1KXTDXL__90ago7Dk1Kw/edit?usp=sharing">Resume Doc</a></li>
+						<li><a href="https://www.linkedin.com/in/danielabud/">LinkedIn</a></li>
+						<li><a href="https://github.com/daniel-abud">GitHub</a></li>
+						</ul>
+						</section>
+<!-- 							<section class="alt">
 								<h3>Address</h3>
 								<p>San Francisco/CA</p>
 							</section>
 							<section>
-								<h3>Email</h3>
+ 								<h3>Email</h3>
 								<p><a href="dlabud@gmail.com">dlabud@gmail.com</a></p>
 							</section>
 							<section>
-								<h3>Social</h3>
+ 								<h3>Resume</h3>
+								<p><a href="https://docs.google.com/document/d/1OP9Mu_p1bb9yRUprzOPFUPB1KXTDXL__90ago7Dk1Kw/edit?usp=sharing">Resume Doc</a></p>
+							</section>
+ -->
+ <!-- 							<section>
+ 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="https://www.linkedin.com/in/danielabud/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/daniel-abud" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-							</section>
+									<!-- <li><a href="https://docs.google.com/document/d/1OP9Mu_p1bb9yRUprzOPFUPB1KXTDXL__90ago7Dk1Kw/edit?usp=sharing" class="fa-file-text"><span class="label">Resume</span></a></li> -->
+								<!-- </ul> -->
+							<!-- </section> -->
 						</section>
 					</footer>
 
