--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Experience</a></li>
+							<li class="active"><a href="index.html">About me</a></li>
+							<li><a href="elements.html">Experience</a></li>
 							<li><a href="generic.html">Education</a></li>
 						</ul>
 						<ul class="icons">
@@ -56,135 +57,11 @@
 									relationships with direct-reports, customers, stakeholders, organizational leadership, and colleagues.</p>
 								</header>
 							</article>
-
-							<article class="post featured">
-								<header class="major">
-									<h2><a href="#">Professional Experience</a></h2>
-								</header>
-							</article>
-
-						<!-- Posts -->
-							<section class="posts">
-								<article>
-										<img src="images/github.png" alt="" />
-									<header><h2>Sr. Data Analyst</h2></header>
-									<header><h2>GitHub</h2></header>
-										<h3>Dec 2019 - Present</h3>
-									<p>
-									Work with key sales leaders on critical strategic, organizational, and operational projects designed to increase revenue, sales productivity, and operational efficiency.
-										<br/><br/>
-									Provide thought leadership, perform business analysis, and support execution of high-impact strategic projects and mission-critical initiatives.
-										<br/><br/>
-									Work with our cross-functional partners (Sales, Marketing, Strategic Finance, Customer Success, Support, Product) to ensure the collaborative execution of key projects, while continually finding opportunities for ongoing program improvements and enhancements.
-									</p>
-								</article>
-								<article>
-										<img src="images/rubys.png" alt="" />
-									<header><h2>Board Member</h2></header>
-									<header><h2>Ruby's Place</h2></header>
-										<h3>Sep 2019 - Present</h3>
-									<p>
-									Ruby's place provides survivors with crisis services, shelter, counseling, children's services, and more. We also provide educational training and technical assistance to law enforcement and providers.
-										<br/><br/>
-									Together, we are taking a stand against human trafficking and domestic abuse by raising awareness and providing the best possible prevention and supportive services to survivors.
-										<br/><br/>
-									<a href="https://www.rubysplace.org" >For more about Ruby's Place.</a>
-									</p>
-								</article>
-								<article>
-										<img src="images/google.png" alt="" />
-									<header><h2>Sales Operations Analyst</h2></header>
-									<header><h2>Google</h2></header>
-										<h3>(via Adecco)</h3>
-										<h3>Sep 2017 - Sep 2019</h3>
-									<p>
-									Leveraged extensive industry experience to effectively examine and analyze statistical data, building an awareness of the market while forecasting trends in ways that drive insights.
-										<br/><br/>
-									Collaborated with Operations Leads, building business models and providing ad hoc data, while also working with Sales, BI, and Finance teams, combining our knowledge in ways that energize results.
-									</p>
-								</article>
-								<article>
-										<img src="images/opentable.png" alt="" />
-									<header><h2>Cash Management Analyst</h2></header>
-									<header><h2>OpenTable</h2></header>
-										<h3>May 2017 - Sep 2017</h3>
-									<p>
-									Reconciled bank statements, reporting, and general month-end processes as well as coordinated and processed invoice batches, applied daily cash receipts, and entered adjustments against AR.
-									</p>
-								</article>
-								<article>
-										<img src="images/opentable.png" alt="" />
-									<header><h2>Accounts Receivable Specialist</h2></header>
-									<header><h2>OpenTable</h2></header>
-										<h3>Jul 2016 - Apr 2017</h3>
-									<p>
-									Oversaw portfolio of 4,000+ accounts, identifying and resolving root causes, managing and reviewing weekly ageing report, and providing customer support based on payment behavior.
-										<br/><br/>
-									Displayed strong capacity to evaluate and improve business processes, proactively energizing and enhancing internal processes while effectively reaching a cash collection target of 97%.
-									</p>
-								</article>
-								<article>
-										<img src="images/booking.png" alt="" />
-									<header><h2>Credit Control Team Lead</h2></header>
-									<header><h2>Booking.com</h2></header>
-										<h3>Apr 2015 - Jun 2016</h3>
-									<p>
-									Managed team of 6 credit controllers, providing support and motivation at all time as well as training and coaching direct-reports to holistically develop credit control team.
-										<br/><br/>
-									Ensured monthly cash collection targets were met, monitored overdue debtors and risk analyses, stimulated commercial awareness within the team, and improved alignment with sales department.
-									</p>
-								</article>
-								<article>
-										<img src="images/booking.png" alt="" />
-									<header><h2>Operational Team Lead</h2></header>
-									<header><h2>Booking.com</h2></header>
-										<h3>Nov 2012 - Apr 2015</h3>
-									<p>
-									Recruited, trained, and supervised team of 15+ direct reports and was responsible for qualifying leads received through the website and converting them into active customers.
-										<br/><br/>
-									Set up and monitored targets/KPIs and improved team’s commercial skills, which led to an eventual merger between operational and commercial departments.
-										<br/><br/>
-									Developed operational procedures and maintained communication with other teams and functional areas, demonstrating ability to listen to others and collaborate effectively.
-									</p>
-								</article>
-								<article>
-										<img src="images/booking.png" alt="" />
-									<header><h2>Sr Coordinator Hotels</h2></header>
-									<header><h2>Booking.com</h2></header>
-										<h3>Mar 2011 - Oct 2012</h3>
-									<p>
-									Oversaw all activities within the area/team of commercial content editors, coordinators and interns as well as recruited, trained, coached and developed over 5 team members.
-										<br/><br/>
-									Managed the workload distribution amongst the team, setting priorities based on demand and providing management support along the way.
-									</p>
-								</article>
-								<article>
-									<header><h2>Travel Coordinator</h2></header>
-									<header><h2>TTK Sports Marketing</h2></header>
-										<h3>Aug 2009 - Mar 2011</h3>
-									<p>
-									Managed strategic planning and growth initiative of the travel department as well as developed global travel itineraries and managed financial resources and sales to successfully improving ROI.
-									</p>
-								</article>
-
-<!-- 								<article>
-									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
- -->							</section>
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<section class="split contact">
+				<footer id="footer">
+					<section class="split contact">
 						<section>
 						<ul>
 						<li>San Francisco, CA</li>
@@ -194,29 +71,8 @@
 						<li><a href="https://github.com/daniel-abud">GitHub</a></li>
 						</ul>
 						</section>
-<!-- 							<section class="alt">
-								<h3>Address</h3>
-								<p>San Francisco/CA</p>
-							</section>
-							<section>
- 								<h3>Email</h3>
-								<p><a href="dlabud@gmail.com">dlabud@gmail.com</a></p>
-							</section>
-							<section>
- 								<h3>Resume</h3>
-								<p><a href="https://docs.google.com/document/d/1OP9Mu_p1bb9yRUprzOPFUPB1KXTDXL__90ago7Dk1Kw/edit?usp=sharing">Resume Doc</a></p>
-							</section>
- -->
- <!-- 							<section>
- 								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="https://www.linkedin.com/in/danielabud/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://github.com/daniel-abud" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-									<!-- <li><a href="https://docs.google.com/document/d/1OP9Mu_p1bb9yRUprzOPFUPB1KXTDXL__90ago7Dk1Kw/edit?usp=sharing" class="fa-file-text"><span class="label">Resume</span></a></li> -->
-								<!-- </ul> -->
-							<!-- </section> -->
-						</section>
-					</footer>
+					</section>
+				</footer>
 
 				<!-- Copyright -->
 					<div id="copyright">
