--- a/generic.html
+++ b/generic.html
@@ -25,12 +25,14 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">Experience</a></li>
+							<li><a href="index.html">About me</a></li>
+							<li><a href="elements.html">Experience</a></li>
 							<li class="active"><a href="generic.html">Education</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/danielabud" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/daniel-abud" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+						</ul>
 					</nav>
 
 				<!-- Main -->
@@ -71,9 +73,17 @@
 
 					</div>
 
+<!--
+					idea - add schools logos
+						<h3>Left &amp; Right</h3>
+						<p><span class="image left"><img src="images/pic08.jpg" alt="" /></span>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Vestibulum ante ipsum primis in faucibus magna blandit adipiscing eu felis iaculis.</p>
+						<p><span class="image right"><img src="images/pic09.jpg" alt="" /></span>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Vestibulum ante ipsum primis in faucibus magna blandit adipiscing eu felis iaculis.</p>
+						<hr />
+ -->
+
 				<!-- Footer -->
-					<footer id="footer">
-						<section class="split contact">
+				<footer id="footer">
+					<section class="split contact">
 						<section>
 						<ul>
 						<li>San Francisco, CA</li>
@@ -83,29 +93,8 @@
 						<li><a href="https://github.com/daniel-abud">GitHub</a></li>
 						</ul>
 						</section>
-<!-- 							<section class="alt">
-								<h3>Address</h3>
-								<p>San Francisco/CA</p>
-							</section>
-							<section>
- 								<h3>Email</h3>
-								<p><a href="dlabud@gmail.com">dlabud@gmail.com</a></p>
-							</section>
-							<section>
- 								<h3>Resume</h3>
-								<p><a href="https://docs.google.com/document/d/1OP9Mu_p1bb9yRUprzOPFUPB1KXTDXL__90ago7Dk1Kw/edit?usp=sharing">Resume Doc</a></p>
-							</section>
- -->
- <!-- 							<section>
- 								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="https://www.linkedin.com/in/danielabud/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://github.com/daniel-abud" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-									<!-- <li><a href="https://docs.google.com/document/d/1OP9Mu_p1bb9yRUprzOPFUPB1KXTDXL__90ago7Dk1Kw/edit?usp=sharing" class="fa-file-text"><span class="label">Resume</span></a></li> -->
-								<!-- </ul> -->
-							<!-- </section> -->
-						</section>
-					</footer>
+					</section>
+				</footer>
 
 				<!-- Copyright -->
 					<div id="copyright">
