--- a/index.html
+++ b/index.html
@@ -52,9 +52,15 @@
 							<article class="post featured">
 								<header class="major">
 									<h2><a href="#">About me</a></h2>
-									<p>I am a multidisciplinary professional with experiences in analytics, operations, sales, and finance. My analytical skills pair well with my time management acumen and my attention to detail. I am proficient with SQL,
- 									Excel, Salesforce, Looker, Great Plains, and SAP, and I am fluent in English, Spanish, and Portuguese. I am a strong communicator, collaborator, and mentor able to effectively build and nurture strong
-									relationships with direct-reports, customers, stakeholders, organizational leadership, and colleagues.</p>
+									<p>
+									I am a multidisciplinary professional with experiences in analytics, operations, sales, and finance. 
+									My analytical skills pair well with my time management acumen and my attention to detail. 
+									I am proficient with SQL, Excel, Salesforce, Looker, Great Plains, and SAP.
+									</p>
+									<p>
+									Fluent in English, Spanish, and Portuguese, I am a strong communicator, collaborator, and mentor able to effectively build and nurture strong
+									relationships with direct-reports, customers, stakeholders, organizational leadership, and colleagues.
+									</p>
 								</header>
 							</article>
 					</div>
