--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">About me</a></h2>
+									<!-- <h2><a href="#">About me</a></h2> -->
+									<h2>About me</h2>
 									<p>
 									I am a multidisciplinary professional with experiences in analytics, operations, sales, and finance. 
 									My analytical skills pair well with my time management acumen and my attention to detail. 
