--- a/elements.html
+++ b/elements.html
@@ -41,7 +41,8 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">Professional Experience</a></h2>
+									<!-- <h2><a href="#">Professional Experience</a></h2> -->
+									<h2>Professional Experience</h2>
 								</header>
 							</article>
 
