--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 						<h1>daniel<br />
 						abud</h1>
 						<p>Business Analyst with experiences at Google, GitHub, Booking.com, and OpenTable</p>
-						<p>Helping businesses turn information into actionable insights that will increase revenue, sales productivity, and operational efficiency</p>
+						<p>Helping businesses turn information into actionable insights that increase revenue, sales productivity, and operational efficiency</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
