--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									<p>
 									I am a multidisciplinary professional with experiences in analytics, operations, sales, and finance.
 									My analytical skills pair well with my time management acumen and my attention to detail.
-									I am proficient with SQL, Excel, Salesforce, Looker, Great Plains, SAP and BI tools.
+									I am proficient with Python, SQL, Excel, Salesforce, Looker, Great Plains, SAP and other BI tools.
 									</p>
 									<p>
 									Fluent in English, Spanish, and Portuguese, I am a strong communicator, collaborator, and mentor able to effectively build and nurture strong relationships with direct-reports, customers, stakeholders, organizational leadership, and colleagues.
