--- a/generic.html
+++ b/generic.html
@@ -49,6 +49,9 @@
 										Bachelor's Degree in Business Administration and Management</p>
 								<p>
 									<li>General Assembly - San Francisco, US</br>
+										Python Programming</p>
+								<p>
+									<li>General Assembly - San Francisco, US</br>
 										SQL Bootcamp (Basic and Advanced modules)</p>
 								<p>
 									<li>Excel Communications - Amsterdam, NL</br>
